# ort-chatterbox

./: Cargo.toml  PYTHON_README.md  README.md  log.txt
crates/chatterbox-cli/: Cargo.toml
crates/chatterbox-cli/src/: main.rs
crates/chatterbox-core/: Cargo.toml
crates/chatterbox-core/src/: audio.rs  config.rs  error.rs  inference.rs  lib.rs  models.rs  text.rs  voices.rs
crates/chatterbox-launcher/: Cargo.toml  Dioxus.toml  build.rs  input.css  tailwind.config.js
crates/chatterbox-launcher/assets/: main.css  tailwind.css
crates/chatterbox-launcher/src/: main.rs  state.rs  worker.rs
crates/chatterbox-launcher/src/components/: audio_player.rs  generate_button.rs  generation_progress.rs  header.rs  history.rs  mod.rs  settings.rs  sidebar.rs  tag_buttons.rs  text_input.rs
crates/chatterbox-server/: Cargo.toml
crates/chatterbox-server/src/: main.rs
reference/: gradio_tts_turbo_app.py  tts_turbo.py
src/: chatterbox.rs  main.rs
