[package]
name = "chatterbox-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core TTS inference library for Chatterbox Turbo using ONNX Runtime"

[features]
default = ["cuda"]
cuda = ["ort/cuda"]

[dependencies]
ort.workspace = true
ndarray.workspace = true
half.workspace = true
anyhow.workspace = true
thiserror.workspace = true
hf-hub.workspace = true
tokenizers.workspace = true
hound.workspace = true
rubato.workspace = true
serde.workspace = true
serde_json.workspace = true
