[package]
name = "chatterbox-launcher"
version = "0.1.0"
edition = "2021"
description = "Modern desktop launcher for Chatterbox TTS"

[[bin]]
name = "chatterbox-launcher"
path = "src/main.rs"

[dependencies]
chatterbox-core = { path = "../chatterbox-core" }

# Dioxus
dioxus = { version = "0.7", features = ["desktop"] }
dioxus-logger = "0.7"

# Async
tokio = { version = "1", features = ["sync", "rt-multi-thread", "time"] }

# Audio
rodio = "0.20"
hound = "3.5"

# File dialogs
rfd = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1.0"
chrono = "0.4"
